--- a/ex00/ex00/Makefile
+++ b/ex00/ex00/Makefile
@@ -1,6 +1,6 @@
 SRC = megaphone.cpp
-NAME = megaphone
-CC = clang++ -Wall -Wextra -Werror -std=c++98
+NAME = a.out
+CC = c++ -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
