--- a/ex00/ex01/Makefile
+++ b/ex00/ex01/Makefile
@@ -1,6 +1,6 @@
 SRC = *.cpp 
 #da fiare attenzione a non usare *.* che non funziona in makefile
-NAME = repertory
+NAME = a.out
 CC = c++ -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
