--- a/ex04/ex01/Makefile
+++ b/ex04/ex01/Makefile
@@ -1,4 +1,4 @@
-SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp
+SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
 NAME = a.out
 CC = c++ -Wall -Wextra -Werror -std=c++98
 
